admin account status change front-end

--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,12 @@
 .animation-delay-2 {
   animation-delay: -2500ms;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /*Chrome, Safari and Opera */
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
