--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,16 @@
   }
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .animation-delay-1 {
   animation-delay: -1500ms;
 }
